tests/src/frontend/typechecking/invalid/yield2.sk
fun bad(): mutable Iterator<Int> {
  yield "oops"
}

fun main(): void {
  void
}
